--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,3 +99,16 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+  notify-svc:
+    image: trycatchlearn/notify-svc:latest
+    build: 
+      context: .
+      dockerfile: src/NotificationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__HOST=rabbitmq
+    ports:
+      - 7004:80
+    depends_on:
+      - rabbitmq
